--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+
 :root {
-    --cor-de-fundo: #DCDCDC;
-    --rosa: #ff93a@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
-:root {
-    --cor-de-fundo: #DCDCDC;
-    --rosa: #ff93a3;
+    --cor-de-fundo: #F8F8FF;
+    --verde: #87CEFA;
     --branco: #FFFFFF;
-    --botao-ativo: #FFB6C1;
-    --botao-inativo: #FFC0CB;
-    --texto-fundo:#FFB6C1;
+    --botao-ativo: #8ddbe9;
+    --botao-inativo: rgba(41, 131, 248, 0.651);
+    --texto-fundo: rgba(41, 131, 248, 0.651);
 }
+
 body {
     background-color: var(--cor-de-fundo);
-    color: var(--rosa);
+    color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
+
+
 .conteudo-principal {
     display: flex;
     flex-direction: column;
@@ -30,12 +31,14 @@ body {
     width: 100%;
     font-size: 32px;
 }
+
 .titulo-principal span {
-    color: var(--branco);
+    color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -44,18 +47,73 @@ body {
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid var(--botao-ativo); 
-    border-left: 2px solid var(--botao-ativo); 
-    border-right: 2px solid var(--botao-ativo); 
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
     border-top: none;
-}
-.botoes {
-    display: block;
 }
 
 .botao:first-child {
     border-radius: 40px 40px 0 0;
 }
+
+.botoes {
+    display: block;
+}
+
+.botao.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
+.aba-conteudo.ativo{
+    display:block;
+}
+
+.aba-conteudo{
+    display: none;
+}
+
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+}
+.contador-digito-texto{
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
+}
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+}
+
+.contador{
+    font-size: 20px;
+    text-align: center;
+}
+
+.contador{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+} 
+.contador-digito{
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+}
+
 @media screen and (min-width: 768px) {
     .botoes {
         display: flex;
@@ -68,58 +126,4 @@ body {
     .botao:last-child {
         border-radius: 0 40px 0 0;
     }
-}
-
-.botao.ativo{
-    background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--rosa);
-}
-
-
-.abas-textos{
-    background-color: var(--rosa);
-    padding: 40px;
-    border-radius: 0 0 40px 40px;
-}
-.aba-conteudo.ativo{
-    display:block;   
-}
-.aba-conteudo{
-    display: none;
-}
-.aba-conteudo-titulo-principal{
-    font-size: 28px;
-    text-align: center;
-    color: var(--branco);
-}
-.aba-conteudo-titulo-secundario{
-    text-align: center;
-    color: var(--branco);
-    text-transform: uppercase;
-}
-.contador{
-    display: flex;
-    font-size: 30px;
-    text-align: center;
-    color: var(--branco);
-
-}
-.contador{
-    display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.contador-digito{
-    padding: 0 16px;
-    text-align: center;
-    min-width: 100px;
-}
-.contador-digito-numero{
-    font-size: 80px;
-    margin: 0;
-}
-.contador-digito-texto{
-    color: var(--branco);
-    font-size: 20px;
-    margin: 0;
 }
