--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #F8F8FF;
+    --cor-de-fundo: #afafaf;
     --verde: #87CEFA;
     --branco: #FFFFFF;
     --botao-ativo: #8ddbe9;
